CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(GameEngine)

# Settings
SET		(CMAKE_CXX_STANDARD 14)
SET		(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Bin)

LINK_DIRECTORIES	(${CMAKE_SOURCE_DIR}/Lib)
INCLUDE_DIRECTORIES (
	${CMAKE_SOURCE_DIR}/Include
	
)

# Subdirectories
ADD_SUBDIRECTORY(GameEngine/src)